# library-snippet-registration

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .python-version  AGENTS.md  CLAUDE.md  DEVEOPERS.md  LICENSE  README.md  pyproject.toml  snippet_tool.py  tox.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: DEVEOPERS.md  SPECIFICATION.md
snippet/: __main__.py  setting.py  snippet.py  version.py
snippet/config_template/: library_mark_template.yaml  setting.yml  snippet_config_template.yaml
snippet/src/: file_helper.py  library_loader.py  main.py  snippet_argument.py  snippet_diff.py  snippet_updater.py  string_helper.py
snippet/src/common/: file_helper.py  groupby.py  jinja2_helper.py  string_helper.py
snippet/src/core/: argument.py  mode.py
snippet/src/io/: read_setting.py
snippet/src/lib_loader/: check.py  dataclass.py  load.py
snippet/src/update_snippet/: backup.py  update.py
tests/: conftest.py  test_file_helper.py  test_groupby.py  test_lib_loader_check.py  test_lib_loader_dataclass.py  test_path_expansion.py  test_update_snippet_backup.py  test_update_snippet_update.py
tests/sample_data/.library-snippet-registration/: setting.yml
tests/sample_data/sample_lib/lib2/: lib1_sample1.py
tests/test_argument/: conftest.py  test_argument.py
tests/test_check/: test_check.py
tests/test_check/test_case/diff_snippets/case1/: snippet_a.json
tests/test_snippet_config/: test_snippet_config.py
tests/test_snippet_update/: conftest.py  test_snippet_update.py
(+46 files in other folders)
